Using depedency injection

--- a/Expenses/Base.lproj/Main.storyboard
+++ b/Expenses/Base.lproj/Main.storyboard
@@ -286,6 +286,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="leW-3h-asU"/>
+        <segue reference="NFy-RT-8MH"/>
     </inferredMetricsTieBreakers>
 </document>
